--- a/package.json
+++ b/package.json
@@ -9,20 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.0.24",
+    "@nextui-org/react": "^2.1.10",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "@types/react-redux": "^7.1.26",
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
-    "framer-motion": "^10.16.0",
+    "framer-motion": "^10.16.4",
     "next": "13.4.13",
     "next-auth": "^4.23.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-redux": "^8.1.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
