--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
+    "@tanstack/eslint-plugin-query": "^4.36.1",
     "@types/crypto-js": "^4.1.2"
   }
 }
