--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.1.10",
     "@tanstack/react-query": "^4.35.3",
+    "@tanstack/react-query-devtools": "^4.36.1",
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
